fix contrast ratio

--- a/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
+++ b/frontEndCaptini/src/app/modules/general/components/topics/lesson/lesson-details/lesson-details.component.css
@@ -46,15 +46,15 @@
 }
 
 .btn-listen:hover {
-  background-color: var(--bs-primary-600);
+  background-color: var(--bs-primary-200);
   padding: 7px 16px !important;
-  color: #fff;
+  color: var(--bs-primary-600);
 }
 
 .btn-listen:focus {
-  background-color: var(--bs-primary-700);
+  background-color: var(--bs-primary-600);
   padding: 7px 16px !important;
-  color: var(--bs-primary-100);
+  color: #fff;
 }
 
 .btn-audio:hover {
@@ -64,16 +64,16 @@
 
 .btn-evaluate {
   background-color: #fff;
-  border: 1px solid var(--green);
+  border: 1px solid var(--bs-success);
   padding: 7px 16px !important;
-  color: var(--green);
+  color: var(--bs-success);
 }
 
 .btn-evaluate:hover {
-  background-color: var(--green);
-  border: 1px solid var(--green);
+  background-color: var(--bs-success-200);
+  border: 1px solid var(--bs-success);
   padding: 7px 16px;
-  color: var(--bs-white);
+  color: var(--bs-success-600);
 }
 
 .btn-evaluate:focus {
